# evdi-hello

./: meson.build
src/: edid.cpp  edid.h  evdi.cpp
